# ouroboros-desktop

./: .gitignore  BIBLE.md  Dockerfile  Makefile  Ouroboros.spec  README.md  VERSION  build.sh  build_linux.sh  build_windows.ps1  launcher.py  pyproject.toml  requirements.txt  server.py
docs/: ARCHITECTURE.md  CHECKLISTS.md  CREATING_SKILLS.md  DEVELOPMENT.md
ouroboros/: a2a_executor.py  a2a_server.py  a2a_task_store.py  agent.py  agent_startup_checks.py  agent_task_pipeline.py  chat_upload_api.py  config.py  consciousness.py  consolidator.py  context.py  context_compaction.py  deep_self_review.py  event_bus.py  extension_companion.py  extension_isolated_deps.py  extension_loader.py  extension_ui_validation.py  extensions_api.py  file_browser_api.py  host_service_api.py  improvement_backlog.py  launcher_bootstrap.py  llm.py  local_model.py  local_model_api.py  local_model_autostart.py  loop.py  loop_llm_call.py  loop_tool_execution.py  marketplace_api.py  mcp_api.py  mcp_client.py  memory.py  model_catalog_api.py  onboarding_wizard.py  platform_layer.py  pricing.py  provider_models.py  reflection.py  (+25 more)
prompts/: CONSCIOUSNESS.md  SAFETY.md  SYSTEM.md
scripts/: check_openrouter_reasoning_passthrough.py  download_python_standalone.ps1  download_python_standalone.sh  pyi_rth_pythonnet.py
supervisor/: events.py  git_ops.py  message_bus.py  queue.py  state.py  workers.py
tests/: _shared.py  conftest.py  test_a2a_protocol.py  test_advisory_observability.py  test_advisory_preflight.py  test_advisory_workflow.py  test_advisory_workflow_ext.py  test_agent_effort.py  test_agent_python_env.py  test_agent_task_pipeline.py  test_block1_review_pipeline.py  test_broadcast_ws.py  test_browser_isolation.py  test_browser_tools_smoke.py  test_budget_limits.py  test_budget_tracking.py  test_bughunt_fixes.py  test_build_scripts.py  test_cache_optimization.py  test_chat_js_contracts.py  test_chat_logs_ui.py  test_chat_provenance.py  test_chat_upload.py  test_ci_tool.py  test_claude_code_gateway.py  test_commit_gate.py  test_compaction.py  test_consciousness.py  test_consolidator.py  test_constitution.py  test_context.py  test_context_memory_overhaul.py  test_contracts.py  test_crash_report.py  test_deep_self_review.py  test_doc_context.py  test_docs_sync.py  test_event_bus.py  test_evolution_status.py  (+137 more)
(+84 files in other folders)
